# cesu8-rs

./: Cargo.toml  README.md  basic_tests.sh  test_counts.sh
.github/workflows/: rust.yml
src/: decoding.rs  encoding.rs  legacy_api.rs  lib.rs  main.rs  string.rs  string_impls.rs  tests.rs  unicode.rs
src/ngstr/: cesu8str.rs  cesu8string.rs  cross_impls.rs  mod.rs  mutf8cstr.rs  mutf8cstring.rs  mutf8str.rs  mutf8string.rs  prims.rs
test_files/: random.cesu8.nl.txt  random.cesu8.nl.txt.xxd  random.cesu8.txt  random.cesu8.txt.xxd  random.decoded.txt  random.decoded.txt.xxd  random.nl.txt  random.nl.txt.xxd  random.txt.xxd  random.utf8.txt
tests/: cesu8str_converts_stdio.rs
