[package]
name = "cesu8str"
version = "0.1.0"
authors = ["Chris Moore <git@chrismoore.dev>", "Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Convert to and from CESU-8 encoding (similar to UTF-8)"
license = "Apache-2.0/MIT"
readme = "README.md"

repository = "https://github.com/chrismooredev/cesu8-rs"
documentation = "https://docs.rs/cesu8str"

[dependencies]
clap = { version = "=3.0.0-beta.4", optional = true }

[features]
# Allow access to unstable features when being built with a nightly compiler,
# to keep travis-cargo happy and enable access to benchmarks if we want them.
unstable = []

build-binary = ["clap"]

[[bin]]
name = "cesu8str"
required-features = ["build-binary"]

[[bin]]
name = "count_codepoints"
path = "src/bin/count_codepoints.rs"

[profile.dev]
opt-level=2 # ensure our tight loops are actually optimized
