[package]
name = "cesu8str"
version = "0.1.2"
authors = ["Chris Moore <git@chrismoore.dev>", "Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Convert to and from CESU-8 or Modified UTF-8 encodings, only when necessary."
license = "Apache-2.0/MIT"
readme = "README.md"

repository = "https://github.com/chrismooredev/cesu8str-rs"
documentation = "https://docs.rs/cesu8str"
keywords = ["jvm","cesu8","mysql"]
categories = ["encoding", "command-line-utilities", "database"]

exclude = [
    "basic_tests.sh",
    "test_counts.sh",
    "test_files/*",
]

[dependencies]
clap = { version = "^4.0.24", optional = true, features = ['derive'] }

[dev-dependencies]
libc = "0.2.137"
paste = "1.0.11"
rusty-fork = "0.3.0"

[features]
# Allow access to unstable features when being built with a nightly compiler,
# to keep travis-cargo happy and enable access to benchmarks if we want them.
unstable = []

validate-release = []
build-binary = ["clap"]

[[bin]]
name = "cesu8str"
required-features = ["build-binary"]

[[bin]]
name = "count_codepoints"
path = "src/bin/count_codepoints.rs"

[profile.dev]
opt-level=2 # ensure our tight loops are actually optimized
